--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -49,6 +49,27 @@ android {
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
+        multiDexEnabled true
+    }
+
+    flavorDimensions "default"
+    productFlavors {
+        prod {
+            dimension "default"
+            resValue "string", "app_name", "Flutter Demo Prod"
+        }
+        sta {
+            dimension "default"
+            applicationIdSuffix ".sta"
+            resValue "string", "app_name", "Flutter Demo Sta"
+            versionNameSuffix ".sta"
+        }
+        dev {
+            dimension "default"
+            applicationIdSuffix ".dev"
+            resValue "string", "app_name", "Flutter Demo Dev"
+            versionNameSuffix ".dev"
+        }
     }
 
     buildTypes {
@@ -64,4 +85,10 @@ flutter {
     source '../..'
 }
 
-dependencies {}
+dependencies {
+    implementation 'androidx.multidex:multidex:2.0.1'
+    implementation 'com.google.firebase:firebase-core:21.1.1'
+}
+
+apply plugin: 'com.google.gms.google-services'
+apply plugin: 'com.google.firebase.crashlytics'
