--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   freezed_annotation: ^2.4.1
   easy_localization: ^3.0.3
   json_annotation: ^4.0.6
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
