fix logout and login

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   easy_localization: ^3.0.3
   json_annotation: ^4.0.6
   shared_preferences: ^2.2.2
+  modal_bottom_sheet: ^2.1.2
+  flutter_easyloading: ^3.0.5
 
 dev_dependencies:
   flutter_test:
@@ -44,6 +46,8 @@ dev_dependencies:
   injectable_generator: ^2.4.1
   json_serializable: ^6.7.1
 
+dependency_overrides:
+  modal_bottom_sheet: ^3.0.0-pre
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
