--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   shared_preferences: ^2.2.2
   modal_bottom_sheet: ^2.1.2
   flutter_easyloading: ^3.0.5
+  geolocator: ^10.1.0
+  dots_indicator: ^3.0.0
 
 dev_dependencies:
   flutter_test:
