--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   flutter_easyloading: ^3.0.5
   geolocator: ^10.1.0
   dots_indicator: ^3.0.0
+  image_picker: ^1.0.4
 
 dev_dependencies:
   flutter_test:
