--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   dots_indicator: ^3.0.0
   image_picker: ^1.0.4
   firebase_storage: ^11.5.3
+  path: ^1.8.3
 
 dev_dependencies:
   flutter_test:
