--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   image_picker: ^1.0.4
   firebase_storage: ^11.5.3
   path: ^1.8.3
+  photo_view: ^0.14.0
 
 dev_dependencies:
   flutter_test:
