--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   firebase_storage: ^11.5.3
   path: ^1.8.3
   photo_view: ^0.14.0
+  geocoding: ^2.1.1
+  uuid: ^4.2.2
+  http: ^1.1.0
 
 dev_dependencies:
   flutter_test:
