--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   geocoding: ^2.1.1
   uuid: ^4.2.2
   http: ^1.1.0
+  permission_handler: ^11.0.1
 
 dev_dependencies:
   flutter_test:
