--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: bpm
+name: assoshare
 description: A new Flutter project.
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -16,28 +16,49 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.6
-  flutter_bloc: ^8.1.3
-  firebase_core: ^2.22.0
-  cloud_firestore: ^4.13.1
-  firebase_auth: ^4.14.0
-  font_awesome_flutter: ^10.6.0
+  #https://pub.dev/packages/cupertino_icons
+  cupertino_icons: ^1.0.8
+
+  #https://pub.dev/packages/flutter_bloc
+  flutter_bloc: ^8.1.6
+
+  #FIREBASE
+  #https://pub.dev/packages/firebase_core
+  firebase_core: ^3.8.0
+
+  #https://pub.dev/packages/cloud_firestore
+  cloud_firestore: ^5.5.0
+
+  #https://pub.dev/packages/firebase_auth
+  firebase_auth: ^5.3.2
+
+  #https://pub.dev/packages/firebase_storage
+  firebase_storage: ^12.3.6
+
+  #https://pub.dev/packages/font_awesome_flutter
+  font_awesome_flutter: ^10.8.0
+
   equatable: ^2.0.5
   logger: ^2.0.2+1
-  firebase_crashlytics: ^3.4.8
+  firebase_crashlytics: ^4.1.4
   injectable: ^2.3.2
   get_it: ^7.6.4
-  connectivity_plus: ^5.0.1
+
+  #https://pub.dev/packages/connectivity_plus
+  connectivity_plus: ^6.1.0
+
   freezed_annotation: ^2.4.1
   easy_localization: ^3.0.3
   json_annotation: ^4.0.6
   shared_preferences: ^2.2.2
   modal_bottom_sheet: ^2.1.2
   flutter_easyloading: ^3.0.5
-  geolocator: ^10.1.0
+
+  #https://pub.dev/packages/geolocator
+  geolocator: ^13.0.2
+
   dots_indicator: ^3.0.0
   image_picker: ^1.0.4
-  firebase_storage: ^11.5.3
   path: ^1.8.3
   photo_view: ^0.14.0
   geocoding: ^2.1.1
@@ -93,19 +114,11 @@ flutter:
     - android/app/src/main/kotlin/
     - android/app/src/main/kotlin/com/
     - android/app/src/main/kotlin/com/rennes/
-    - android/app/src/main/kotlin/com/rennes/bpm/
     - android/app/src/debug/
     - android/app/src/profile/
     - android/gradle/
     - android/gradle/wrapper/
     - android/.gradle/
-    - android/.gradle/7.5/
-    - android/.gradle/7.5/checksums/
-    - android/.gradle/7.5/fileHashes/
-    - android/.gradle/7.5/fileChanges/
-    - android/.gradle/7.5/vcsMetadata/
-    - android/.gradle/7.5/executionHistory/
-    - android/.gradle/7.5/dependencies-accessors/
     - android/.gradle/vcs-1/
     - android/.gradle/buildOutputCleanup/
 
