--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,7 +49,7 @@ dependencies:
 
   freezed_annotation: ^2.4.1
   easy_localization: ^3.0.3
-  json_annotation: ^4.0.6
+  json_annotation: ^4.9.0
   shared_preferences: ^2.2.2
   modal_bottom_sheet: ^2.1.2
   flutter_easyloading: ^3.0.5
@@ -61,10 +61,15 @@ dependencies:
   image_picker: ^1.0.4
   path: ^1.8.3
   photo_view: ^0.14.0
-  geocoding: ^2.1.1
   uuid: ^4.2.2
   http: ^1.1.0
   permission_handler: ^11.0.1
+
+  #https://pub.dev/packages/dio
+  dio: ^5.7.0
+
+  #https://pub.dev/packages/flutter_svg
+  flutter_svg: ^2.0.15
 
 dev_dependencies:
   flutter_test:
@@ -75,7 +80,7 @@ dev_dependencies:
   build_runner: ^2.4.6
   freezed: ^2.4.5
   injectable_generator: ^2.4.1
-  json_serializable: ^6.7.1
+  json_serializable: ^6.9.0
   change_app_package_name: ^1.4.0
 
 dependency_overrides:
@@ -93,6 +98,7 @@ flutter:
 
   assets:
     - assets/translations/
+    - assets/images/
     - android/
     - android/app/
     - android/app/src/
