--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,6 +71,9 @@ dependencies:
   #https://pub.dev/packages/flutter_svg
   flutter_svg: ^2.0.15
 
+  #https://pub.dev/packages/intl
+  intl: ^0.19.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
